2006-06-09  Richard B. Kreckel  <kreckel@ginac.de>

	* src/base/digitseq/cl_DS.h (struct DS): Change len type to uintC.

2006-05-30  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* m4/gettimeofday.m4 (CL_GETTIMEOFDAY): Fix M4 quoting.

2006-05-20  Bruno Haible  <bruno@clisp.org>

	* src/base/random/cl_random_from.cc: Treat FreeBSD, NetBSD like other
	Unix platforms.

2006-05-07  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/modules.h (CL_JUMP_TO): Fix for Intel Mac.

2006-04-25  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	Prepare for autoconf-2.60.
	* Makefile.in (datarootdir): New variable.
	* src/Makefile.in (datarootdir): New variable.
	* doc/Makefile.in (datarootdir): New variable.

2006-04-25  Bruno Haible  <bruno@clisp.org>
            Richard B. Kreckel  <kreckel@ginac.de>

	Make it theoretically possible to use bignums and long-floats with
	more than 2^32 significant digits or bits.
	* doc/cln.tex (logcount): Change return type to uintC.
	(struct cl_byte): Change elements to uintC.
	(integer_length, ord2, power2p): Change return type to uintC.
	(scale_float): Change argument type to sintC.
	(float_digits, float_precision): Change return type to uintC.
	* examples/atan_recip.cc: Use uintC instead of uintL where appropriate.
	* examples/atanh_recip.cc: Likewise.
	* include/cln/GV.h: Likewise.
	* include/cln/GV_complex.h: Likewise.
	* include/cln/GV_integer.h: Likewise.
	* include/cln/GV_modinteger.h: Likewise.
	* include/cln/GV_number.h: Likewise.
	* include/cln/GV_rational.h: Likewise.
	* include/cln/GV_real.h: Likewise.
	* include/cln/SV.h: Likewise.
	* include/cln/SV_complex.h: Likewise.
	* include/cln/SV_integer.h: Likewise.
	* include/cln/SV_number.h: Likewise.
	* include/cln/SV_rational.h: Likewise.
	* include/cln/SV_real.h: Likewise.
	* include/cln/SV_ringelt.h: Likewise.
	* include/cln/dfloat.h: Likewise.
	* include/cln/ffloat.h: Likewise.
	* include/cln/float.h: Likewise.
	* include/cln/integer.h: Likewise.
	* include/cln/lfloat.h: Likewise.