@@ -1,3 +1,10 @@
+2006-06-13  Richard B. Kreckel  <kreckel@ginac.de>
+
+	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Force host_cpu=i386 for x86_64
+	if userland is 32 bit.
+	* include/cln/config.h.in: Simplify __x86_64__ selection.
+	* src/base/digitseq/cl_asm_x86_64_.cc: Remove.
+
 2006-06-09  Richard B. Kreckel  <kreckel@ginac.de>
 
 	* src/base/digitseq/cl_DS.h (struct DS): Change len type to uintC.
